--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "start2": "node ./javascripts/server.js"
   },
   "dependencies": {
     "build": "^0.1.4",
