--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "start2": "node ./routes/server.js"
+    "start": "node ./bin/www && ./routes/server.js"
   },
   "dependencies": {
     "build": "^0.1.4",
